--- a/shopify/package.json
+++ b/shopify/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18",
 
     "react-hook-form": "^7.52.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
     "react-firebase-hooks": "^5.1.1"
 
   },
