--- a/shopify/tsconfig.json
+++ b/shopify/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "../providers/GlobalProvider.tsx"
+    "providers/GlobalProvider.tsx"
   ],
   "exclude": ["node_modules"]
 }
